--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,3 +6,9 @@ jobs:
     steps:
       - name: my-steps
         run: echo "hello-world"
+  my-jobs2:
+    runs-on: ubuntu-latest
+    needs: my-jobs
+    steps:
+      - name: my-steps
+        run: echo "hello-world"
